--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "moment": "^2.29.4",
     "next": "13.4.19",
