--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://francis:123@cluster0.vfb2nju.mongodb.net/ry-interior-shop"
+NEXTAUTH_SECRET = "Ry-web-shop"
