login with google

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@
 
 DATABASE_URL="mongodb+srv://francis:123@cluster0.vfb2nju.mongodb.net/ry-interior-shop"
 NEXTAUTH_SECRET = "Ry-web-shop"
+GOOGLE_CLIENT_ID = 505330402998-cber3u57h3u31t9lrvsbpeng2nnamsls.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET =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
